# daw

./: Cargo.toml  README.md
.github/workflows/: ci.yml
daw-ai/: Cargo.toml
daw-ai/src/: lib.rs  smart_eq.rs  stem_separator.rs
daw-app/: Cargo.toml
daw-app/src/: main.rs
daw-collab/: Cargo.toml
daw-collab/src/: lib.rs  project.rs
daw-engine/: Cargo.toml
daw-engine/src/: audio_graph.rs  automation.rs  commands.rs  dsp.rs  engine.rs  lib.rs  memory_pool.rs  plugins.rs  profiling.rs  project_file.rs  triple_buffer.rs
daw-engine/tests/: integration_test.rs  plugin_test.rs
daw-midi/: Cargo.toml
daw-midi/src/: lib.rs  sequencer.rs  synth.rs  types.rs
daw-midi/tests/: midi_test.rs
daw-renderer/: Cargo.toml
daw-renderer/src/: gpu.rs  lib.rs  meter.rs  spectrum.rs  waveform.rs
daw-tauri/: Cargo.toml
daw-tauri/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_audio_graph.rs  fuzz_automation.rs
