[workspace]
members = ["daw-engine", "daw-ai", "daw-collab", "daw-app", "daw-renderer", "daw-tauri"]
resolver = "2"

[workspace.dependencies]
rtrb = "0.3"
petgraph = "0.6"
wide = "0.7"
automerge = "0.5"
tracing = "0.1"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
