[package]
name = "daw-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracy = ["tracing-tracy"]

[dependencies]
rtrb = { workspace = true }
petgraph = { workspace = true }
wide = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.tracing-tracy]
version = "0.11"
optional = true
features = ["enable"]

[dev-dependencies]
approx = "0.5"
