[package]
name = "daw-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
daw-engine = { path = "../daw-engine" }
daw-ai = { path = "../daw-ai" }
daw-collab = { path = "../daw-collab" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
